# mcp-slack

./: LICENSE  README.md  pyproject.toml
src/slack_mcp/: server.py
tests/: test_server.py  verify_slack.py
