[project]
name = "slack-mcp-server"
version = "0.1.0"
dependencies = [
    "mcp",
    "slack-bolt",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
